traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:32: error: expected class or object definition
def fini():Boolean = {
^TraversalDiagonal:37: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:40: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:43: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:46: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:49: error: Unmatched closing brace '}' ignored here
}
^